# include_cstr

./: Cargo.toml  LICENSE  README.md
src/: example.txt  lib.rs  parse.rs
tests/compile_fail/: empty.rs  empty.stderr  include_zero.rs  include_zero.stderr  non_existent.rs  non_existent.stderr  non_str.rs  non_str.stderr
tests/pass/: binary.rs  const.rs  macro.rs  text.rs
